--- a/src/app/pages/se1/se1.page.html
+++ b/src/app/pages/se1/se1.page.html
@@ -12,6 +12,9 @@
   Ir a sub página 1 de Sistemas Expertos I
 </ion-button>
 
+<ion-button  expand="block" [routerLink]="['/se12']" routerLinkActive="router-link-active" >
+  Ir a sub página 2 de Sistemas Expertos I
+</ion-button>
 
 <ion-footer>
   <ion-toolbar>
