--- a/src/app/pages/se2/se2.page.html
+++ b/src/app/pages/se2/se2.page.html
@@ -6,8 +6,37 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <h3>Página SE2</h3>
+  <ion-card>
+    <ion-item>
+      <ion-img class="center" src="../../../assets/img/aplicaciones_sistemas_expertos.jpg"></ion-img>
+    </ion-item>
+    <ion-card-header>
+      <ion-card-subtitle></ion-card-subtitle>
+      <ion-card-title>Aplicaciones de un Sistema Experto</ion-card-title>
+  </ion-card-header>
+  
+    <ion-card-content>
+      En general, en cuanto a las aplicaciones de estos sistemas expertos, algunas de las más populares son:
+
+      Gestión de la información.
+      Hospitales e instalaciones médicas.
+      Gestión de servicios de ayuda.
+      Evaluación del desempeño de los empleados.
+      Análisis de préstamos.
+      Detección de virus.
+      Útil para proyectos de reparación y mantenimiento.
+      Optimización de almacenes.
+      Planificación y programación.
+      La configuración de objetos fabricados.
+      Toma de decisiones financieras Publicación de conocimiento.
+      Monitorización y control de procesos.
+      Supervisar el funcionamiento de la planta y el controlador.
+      Bolsa de comercio.
+      Horarios de aerolínea y horarios de carga
+
+    </ion-card-content>
+  </ion-card>
   <ion-button  expand="block" [routerLink]="['/se12']" routerLinkActive="router-link-active" >
-    Ir a Sub Página 2 De Sistemas Expertos I
+    Componentes de Salida
   </ion-button>
 </ion-content>
