--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -1,13 +1,29 @@
 
+<ion-header class="ion-padding">
+  <ion-title>Página Principal</ion-title>
+</ion-header>
 <ion-content class="ion-padding">
-  <h3> Página Principal</h3>
+  
+  <ion-card>
+    <ion-item>
+      <ion-img class="center" src="../../../assets/img/expertos.jpg"></ion-img>
+    </ion-item>
+    <ion-card-header>
+      <ion-card-subtitle>Definición</ion-card-subtitle>
+      <ion-card-title>Sistemas Expertos</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Los sistemas expertos son sistemas basados en computadoras, interactivos y confiables, que pueden tomar decisiones y resolver problemas complejos.
+    </ion-card-content>
+  </ion-card>
 
   <!-- Crear un boton -->
   <ion-button  expand="block" [routerLink]="['/se1']" routerLinkActive="router-link-active" >
-    Ir a Sistemas Expertos I
+    Componentes
   </ion-button>
   <ion-button expand="block" [routerLink]="['/se2']" routerLinkActive="router-link-active" >
-    Ir a Sistemas Expertos II
+    Aplicaciones
   </ion-button>
 </ion-content>
 
